Comment and format code in courses/

--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -1,3 +1,5 @@
+<!-- MAKE SURE TO KEEP CONSISTENT WITH THE STYLE IN COURSE_LIST.HTML -->
+
 {% extends "public/base.html" %}
 {% block content %}
     <article class="media content-section">
