--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -26,14 +26,14 @@
                 <a class="btn btn-outline-primary" href="{% url 'courses-list' %}">Clear Filters</a>
             </div>
         </div>
-        <div class="col-md-8 col-xs-12 order-sm-1">
+        <div class="col-xs-12 col-sm-8 order-sm-1">
             {% for course in courses %}
                 {% if course.approved %}
                     {% if not course.curated or course.curated and user.student.admitted_student %}
                         <article class="media content-section mb-2">
                             <div class="media-body">
                                 <div class="article-metadata">
-                                    <h3 class="article-title">{{ course.course_name }}</h3>
+                                    <h4><a class="course-name" href="{% url 'courses-detail' course.id %}"><u>{{ course.course_name }}</u></a></h4>
                                     <p><i>Taught by {{ course.teacher }}</i></p>
                                     {% if course.curated %}
                                         <span><strong>*Curated Course*</strong></span>
@@ -53,7 +53,7 @@
                                                 {% else %}
                                                     <small class="text-muted"><strong>Seats Filled:</strong> {{ section.students.all.count }} of {{ section.room.max_capacity }}</small>
                                                 {% endif %}
-                                                <form method="POST" style="display:inline">
+                                                <form method="POST" class="d-inline">
                                                     {% csrf_token %}
                                                     {% if section in user.student.section_set.all %}
                                                         <button class="btn btn-success btn-sm ml-2" type="submit" name="{{ section.id }}" value="Unregister">Unregister</button>
